--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -19,6 +19,10 @@ android {
     namespace = 'org.firstinspires.ftc.teamcode'
 }
 
+repositories {
+    maven { url = 'https://www.jitpack.io' }
+}
+
 dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
@@ -27,4 +31,9 @@ dependencies {
 dependencies {
     implementation 'org.openftc:easyopencv:1.5.2'
     implementation 'org.openftc:apriltag:1.1.0'
+
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'com.acmerobotics.roadrunner:core:0.5.5'
+
+    implementation 'com.github.AsianKoala:koawalib:1.3.7'
 }
