--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -17,10 +17,10 @@ apply from: '../build.dependencies.gradle'
 
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
-}
 
-repositories {
-    maven { url = 'https://www.jitpack.io' }
+    packagingOptions {
+        jniLibs.useLegacyPackaging true
+    }
 }
 
 dependencies {
@@ -30,8 +30,8 @@ dependencies {
 
 dependencies {
     implementation 'org.openftc:easyopencv:1.5.2'
-    implementation 'org.openftc:apriltag:1.1.0'
+}
 
-    implementation 'org.apache.commons:commons-math3:3.6.1'
-    implementation 'com.acmerobotics.roadrunner:core:0.5.5'
+dependencies {
+    implementation 'org.openftc:apriltag:1.1.0'
 }
