--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -35,3 +35,8 @@ dependencies {
 dependencies {
     implementation 'org.openftc:apriltag:1.1.0'
 }
+
+dependencies {
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'com.acmerobotics.roadrunner:core:0.5.5'
+}
